--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 # requirements.txt
 torch>=1.9.0
+torchvision>=0.10.0
 numpy>=1.19.0
 matplotlib>=3.3.0
 pandas>=1.2.0
 tqdm>=4.60.0
 scipy>=1.6.0
+imageio>=2.9.0
 
